DOMjudge Programming Contest Judging System

Version 1.2.1 - SVN
-------------------


Version 1.2.0 - 26 June 2006
----------------------------
 - Added websubmit (Closes: #1103084).
 - Added support for team passwords (generating and validating).
 - Added team status light to jury teams overview (Closes: #1441783).
 - Added confirm dialog when sending a clarification (reply).
 - Added examples and documentation for how to use interpreted languages.
 - Added support for specialised run and compare scripts.
 - Timeout submitclient connection to server (Closes: #1477739).
 - Minimum required PHP version now 4.3.2.
 - Allow for IPv6 IP-addresses to be used.
 - Correct parameters to `diff`, since '-2' is obsoleted.
 - Checked all BASH scripts for 'set -e' (Closes: #1508492).
 - Tweak HTML to be fully XHTML 1.0 Strict compliant.

Version 1.1.0 - 22 December 2005
--------------------------------
 - Added 'make check' target which submits test-sources.
 - Fixed that no compiler output gives compilation error.
 - When solutions timeout, first try to kill graciously (Closes: #1312848).
 - Removed LaTeX packages from the sources to remove GPL/LPPL conflicts.
 - Changed runguard license to IBM Public License.
 - Added diff to previous submission in source display (Closes: #1310244).
 - Extra check on submission filenames to prevent theoretical exploits
   (Closes: #1355816).
 - Added summary of solved problems to team submissions page
   (Closes: #1312241).
 - Automatically quote clarification request when replying
   (Closes: #1347688).
 - [INCOMPATIBLE CHANGE] Renamed table category to team_category,
   team_category.catid to categoryid and team.catid to categoryid,
   scoreboard_{jury,public}.problem to probid.
 - Added team_affiliation table which allows for storing the university,
   institution or company teams belong to.
 - Added room and comments fields to team table.
 - Display sort-order in category overview.
 - A lot of small webinterface enhancements.
